tests/unit/snapshots/unit__security_endpoint_snapshots_tests__key_rotation_check_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "interval_ms": 604800000,
  "last_rotation": null,
  "needs_rotation": true
}
