tests/unit/snapshots/unit__security_endpoint_snapshots_tests__key_rotation_config_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "enabled": true,
  "grace_period_minutes": 5,
  "interval_ms": 3600000,
  "rotation_interval_days": 7,
  "rotation_threshold_days": 1
}
