tests/unit/snapshots/unit__security_endpoint_snapshots_tests__key_rotation_status_no_prior_rotation_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "enabled": true,
  "status": {
    "has_current_key": false,
    "rotation_enabled": true
  },
  "user_last_rotation": null
}
