tests/unit/snapshots/unit__security_endpoint_snapshots_tests__key_rotation_status_shape.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "enabled": true,
  "status": {
    "has_current_key": true,
    "rotation_enabled": true,
    "should_rotate": false
  },
  "user_last_rotation": "[redacted_timestamp]"
}
