tests/unit/snapshots/unit__security_endpoint_snapshots_tests__room_access_strict_forbidden_error.snap
---
source: tests/unit/security_endpoint_snapshots_tests.rs
expression: body
---
{
  "errcode": "M_FORBIDDEN",
  "error": "You must be a room member to modify this room's settings"
}
